@@ -202,6 +202,7 @@
 \input mimetype.tex
 \input minifram.tex
 \input module.tex
+\input mcaptevt.tex
 \input mouseevt.tex
 \input moveevt.tex
 \input mltchdlg.tex
